# apps/api/__init__.py
@@ -1,19 +1,11 @@
-from flask import Blueprint, jsonify, request
-
-import pandas as pd
-import json
-
-
-from flask import Flask, request, make_response, jsonify
 import os
-import werkzeug
-import base64
-from datetime import datetime
+from flask import Blueprint, jsonify, request
 
 from apps.api.api_train import api_train
 from apps.api.api_predict import api_predict
 from apps.api.api_upload import api_upload
 from apps.api.api_rep_notes import api_rep_notes
+from apps.api.api_incident import api_incident
 
 # 環境変数からデータサイズ（単位はByte）を制限する
 # limit upload file size : 1MB
@@ -24,9 +16,14 @@ MAX_JSON_CONTENT_LENGTH = int(os.getenv("MAX_JSON_CONTENT_LENGTH", default="0"))
 # ex) set UPLOAD_DIR_PATH=C:/tmp/flaskUploadDir
 UPLOAD_DIR = os.getenv("UPLOAD_DIR_PATH")
 
-
+# api
 api = Blueprint("api", __name__)
 
+# パラメータの検証は行ってません。
+
+#-------------------------------------------------------------------------------
+# 起動テスト用のインデックス
+#-------------------------------------------------------------------------------
 @api.get("/")
 def index():
     return '''
@@ -35,12 +32,14 @@ def index():
             Please check the link</p>
             <a href='https://editor.swagger.io/'>wagger Editor(Open API)</a>
             '''
+
 #-------------------------------------------------------------------------------
-#@api.post("/upload")
+# ファイルのアップロード
 #-------------------------------------------------------------------------------
 @api.post("/data/<machine_id>")
 def upload(machine_id):
 
+    # アップロード(api_upload)
     api_upload(machine_id, request)
 
     return jsonify({"result": "ok"}), 201
@@ -52,7 +51,7 @@ def upload(machine_id):
 
 def train(machine_id):
 
-    #　学習
+    #　学習(api_train)
     train_result = api_train(machine_id)
 
     if train_result != []:
@@ -76,7 +75,7 @@ def predict(machine_id):
     if predict_resp != []:
         return jsonify(predict_resp), 201
     else:
-        return jsonify({"result": "no data"}), 201
+        return jsonify({"result": "no data"}), 200
 
 
 #-------------------------------------------------------------------------------
@@ -88,10 +87,30 @@ def rep_notes(machine_id):
     # ヘッダーからパラメータを取り出す
     rep_date = request.headers.get('rep_date')
 
-    # 予測
-    notes_resp = api_rep_notes(machine_id, rep_date)
+    # 最適装填枚数(api_rep_notes)
+    rep_notes_resp = api_rep_notes(machine_id, rep_date)
 
-    if notes_resp != []:
-        return jsonify(notes_resp), 201
+    if rep_notes_resp != []:
+        return jsonify(rep_notes_resp), 201
     else:
-        return jsonify({"result": "no data"}), 201
+        return jsonify({"result": "no data"}), 200
+
+#-------------------------------------------------------------------------------
+# インシデント発生
+#-------------------------------------------------------------------------------
+@api.get("/plan/<machine_id>/incident")
+def incident(machine_id):
+
+    # ヘッダーからパラメータを取り出す
+
+    pred_start = request.headers.get('pred_start')
+    cash_position = int(request.headers.get('cash_position'))
+
+    # インシデント発生予測(api_incident)
+    incident_resp = api_incident(machine_id, cash_position, pred_start)
+
+    if incident_resp != []:
+        return jsonify(incident_resp), 201
+    else:
+        return jsonify({"result": "no data"}), 200
+
