# apps/api/api_predict.py
@@ -1,24 +1,52 @@
-import pandas as pd
-import pickle
-
-from apps.crud.models import Cash, Train_result
-from apps.app import app
+from apps.crud.models import Train_result
 from apps.app import db
 
-#from predictor.api import db
+import apps.api.settings as settings
 from bnp.interface import bnp_prediction
 
 def api_predict(machine_id, pred_start, pred_end):
+    """
+    指定された期間の予測を行う
 
+    Args:
+        machine_id (str) : 装置ID
+        pred_start (str) : 予測開始日
+        pred_end (str) : 予測終了日
+
+    Returns:
+        predict_resp (list): 予測結果
+
+        [{
+            currency (str) : 金種
+
+            predict (list) : 予測リスト
+                [
+                    str : 日付
+                    int : 予測枚数
+                ]
+        }]
+    Note:
+        リクエスト
+
+        'GET' \  
+        'http://127.0.0.1:5000/api/models/ws0001/predict' \  
+        -H 'accept: application/json' \  
+        -H 'start_date: 2021-11-01' \  
+        -H 'end_date: 2021-11-10'  
+
+    """
+
+    # 戻り値
     predict_resp = []
 
-    currency_list = ['50K', '100K']
-
-    for currency in currency_list:
+    # 金種で
+    for currency in settings.CURRENCY_LIST :
 
         # データベースより、machine_id,currencyのモデルを読み込む
         train_result = db.session.query(Train_result).filter(Train_result.machine_id == machine_id, Train_result.currency == currency).first()
         #print(df_train_result)
+
+        # データがあれば
         if train_result != None:
 
             # モデルパスの取得
@@ -40,4 +68,5 @@ def api_predict(machine_id, pred_start, pred_end):
             # すべての金種の学習結果
             predict_resp.append(result)
 
+    print('api_predict() : 予測結果\n',predict_resp)
     return predict_resp
