# apps/api/api_rep_notes.py
@@ -1,32 +1,45 @@
-import pandas as pd
-import pickle
-
-from apps.crud.models import Cash, Train_result
-from apps.app import app
+from apps.crud.models import Train_result
 from apps.app import db
 
-#from predictor.api import db
+import apps.api.settings as settings
 from bnp.interface import bnp_prediction
-from bnp.get_rep_notes import get_rep_notes
+from bnp.rep_plan import get_rep_notes
 
-CURRENCY_NUM = 2    # 金種数        
-CASETTE_CAP = 4500  # 金種カセット容量(とりあえず金種で同じとする。)
-
-# カセット装填枚数パターン設定(ex. [[1000, 1000]] 金種毎の配列)
-START_NUM = 500     # この枚数から
-END_NUM = 4500      # この枚数まで
-STEP_NUM = 100      # この枚数刻みで、CASETTE_CAPを超えないカセットパターンを作成する
 
 def api_rep_notes(machine_id, rep_date):
+    """
+    最適な装填枚数を取得する
 
+    Args:
+        machine_id (str): 装置ID
+        rep_date(str) : 装填する日
+
+    Returns:
+        rep_notes_resp : 装填情報リスト
+            [{
+                currency (str) : 金種
+                notes (int): 装填枚数
+                max_days (int) : インシデントまでの日数
+                incident (int) : インシデント(0:発生なし、1:切れ　2:あふれ)
+            }]
+
+    Note:
+        リクエスト
+
+    'GET' \
+    'http://127.0.0.1:5000/api/plan/ws0001/rep_notes' \
+    -H 'accept: application/json' \
+    -H 'rep_date: 2021-11-01'
+
+    """
+    # レスポンス
     rep_notes_resp = []
-    PRED_DAYS = 30          # 予測する日数
 
     # 日付型に変換
     from datetime import datetime, timedelta
     rep_date = datetime.strptime(rep_date, '%Y-%m-%d')
     # rep_dateの30日先
-    pred_end = rep_date + timedelta(days=PRED_DAYS)
+    pred_end = rep_date + timedelta(days=settings.PRED_DAYS)
 
     # 文字列に戻す
     pred_end = pred_end.strftime("%Y-%m-%d")
@@ -34,10 +47,11 @@ def api_rep_notes(machine_id, rep_date):
     print('精査日',rep_date)
     print('予測終了日',pred_end)
 
-    currency_list = ['50K', '100K']
+    # 予測結果のリスト
     predict_data = []
 
-    for i, currency in enumerate(currency_list):
+    # 予測結果を取得する
+    for i, currency in enumerate(settings.CURRENCY_LIST):
 
         # データベースより、machine_id,currencyのモデルを読み込む
         train_result = db.session.query(Train_result).filter(Train_result.machine_id == machine_id, Train_result.currency == currency).first()
@@ -57,17 +71,12 @@ def api_rep_notes(machine_id, rep_date):
 
     print('予測データ',predict_data)
 
-
-    # カセット容量(ex.[2500, 2500] 金種毎の配列)
-    cash_full_num = [CASETTE_CAP for i in range(CURRENCY_NUM)]
-
-    # 切れ枚数(ex. [100, 100] 金種毎の配列)
-    cash_empty_num =  [100 for i in range(CURRENCY_NUM)]
-
-    rep_notes_result = get_rep_notes(predict_data, cash_empty_num, cash_full_num)
+    # 最適装填枚数を取得する
+    rep_notes_result = get_rep_notes(predict_data, settings.CASH_EMPTY_NUM, settings.CASH_FULL_NUM)
     print('最適な補充枚数', rep_notes_result)
 
-    for i, currency in enumerate(currency_list):
+    # レスポンスの作成
+    for i, currency in enumerate(settings.CURRENCY_LIST):
 
         # JSON形式のレスポンスを作成
         result = {
@@ -80,4 +89,5 @@ def api_rep_notes(machine_id, rep_date):
         # すべての金種の学習結果
         rep_notes_resp.append(result)
 
+    print('api_rep_notes() : 装填情報\n',rep_notes_resp)
     return rep_notes_resp
